unpackaged/objects/Login_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Applicant</fullName>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Login Checklists</relationshipLabel>
        <relationshipName>Login_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAT A - Secured</fullName>
                </value>
                <value>
                    <fullName>CAT A - Unsecured</fullName>
                </value>
                <value>
                    <fullName>CAT B - Secured</fullName>
                </value>
                <value>
                    <fullName>CAT B - Unsecured</fullName>
                </value>
                <value>
                    <fullName>UCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not applicable in case of Primary Applicant</inlineHelpText>
        <label>Co-Applicant/Guarantor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Login Checklists (Co-Applicant/Guarantor)</relationshipLabel>
        <relationshipName>Login_Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Login_Checklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Photo Pan Card</fullName>
                </value>
                <value>
                    <fullName>Driving License</fullName>
                </value>
                <value>
                    <fullName>Valid Indian Passport</fullName>
                </value>
                <value>
                    <fullName>School Leaving certificate</fullName>
                </value>
                <value>
                    <fullName>Affidavit on stamp paper with Notary</fullName>
                </value>
                <value>
                    <fullName>Aadhar Card with DOB</fullName>
                </value>
                <value>
                    <fullName>Proof of possession of Aadhaar number</fullName>
                </value>
                <value>
                    <fullName>Job Card Issued by NREGA</fullName>
                </value>
                <value>
                    <fullName>Letter issued by the National Population Register</fullName>
                </value>
                <value>
                    <fullName>Voter ID</fullName>
                </value>
                <value>
                    <fullName>Certificate of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Memorandum &amp; Articles of Association</fullName>
                </value>
                <value>
                    <fullName>Permanent Account Number</fullName>
                </value>
                <value>
                    <fullName>Registration Certificate</fullName>
                </value>
                <value>
                    <fullName>Partnership deed</fullName>
                </value>
                <value>
                    <fullName>OVD Documents of the person holding an attorney</fullName>
                </value>
                <value>
                    <fullName>Trust Deed</fullName>
                </value>
                <value>
                    <fullName>Resolution of the managing body</fullName>
                </value>
                <value>
                    <fullName>Form No. 60 as defined in Income-tax Rules, 1962</fullName>
                </value>
                <value>
                    <fullName>Power of attorney granted to transact on its behalf</fullName>
                </value>
                <value>
                    <fullName>Documents to collectively establish the legal existence</fullName>
                </value>
                <value>
                    <fullName>Certificate/licence issued by the municipal authorities</fullName>
                </value>
                <value>
                    <fullName>Sales and income tax returns</fullName>
                </value>
                <value>
                    <fullName>CST/VAT/ GST certificate (provisional/final)</fullName>
                </value>
                <value>
                    <fullName>Certificate document issued by Tax/Service Tax/Professional</fullName>
                </value>
                <value>
                    <fullName>IEC issued to the proprietary concern</fullName>
                </value>
                <value>
                    <fullName>Complete Income Tax Return</fullName>
                </value>
                <value>
                    <fullName>Utility bills</fullName>
                </value>
                <value>
                    <fullName>Sale Registration Certificate</fullName>
                </value>
                <value>
                    <fullName>12 months old Bank Passbook / Latest Bank Account Statement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Login_Checklist__c</fullName>
        <label>Login Checklist</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Age Proof</fullName>
                </value>
                <value>
                    <fullName>KYC Documents</fullName>
                </value>
                <value>
                    <fullName>Legal Existence Proof - Companies</fullName>
                </value>
                <value>
                    <fullName>Legal Existence Proof - Partnership Firms</fullName>
                </value>
                <value>
                    <fullName>Legal Existence Proof - Trust</fullName>
                </value>
                <value>
                    <fullName>Legal Existence Proof - Unincorporated association</fullName>
                </value>
                <value>
                    <fullName>Legal Existence Proof - Proprietary Firms</fullName>
                </value>
                <value>
                    <fullName>Legal Existence Proof</fullName>
                </value>
                <value>
                    <fullName>Address Proof</fullName>
                </value>
                <value>
                    <fullName>Income Documents - Income Scheme</fullName>
                </value>
                <value>
                    <fullName>Income Documents - LIP Scheme</fullName>
                </value>
                <value>
                    <fullName>Income Documents - GST Scheme</fullName>
                </value>
                <value>
                    <fullName>Income Documents - SARAL UDHYAM (100 DAYS)</fullName>
                </value>
                <value>
                    <fullName>Income Documents - MICRO LAP SCHEME</fullName>
                </value>
                <value>
                    <fullName>Income Documents - BANKING (ABB) SCHEME</fullName>
                </value>
                <value>
                    <fullName>Income Documents - Multi Tenanted</fullName>
                </value>
                <value>
                    <fullName>BT Top up Case</fullName>
                </value>
                <value>
                    <fullName>Limit and Existing Loan Documents</fullName>
                </value>
                <value>
                    <fullName>Signature Verification</fullName>
                </value>
                <value>
                    <fullName>Legal Existence Proof (For companies)</fullName>
                </value>
                <value>
                    <fullName>Ownership proof</fullName>
                </value>
                <value>
                    <fullName>MID</fullName>
                </value>
                <value>
                    <fullName>Existing Loan Document</fullName>
                </value>
                <value>
                    <fullName>ID Proof</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Resi Stability</fullName>
                </value>
                <value>
                    <fullName>Business Stability</fullName>
                </value>
                <value>
                    <fullName>Income Document (Scheme: Captive)</fullName>
                </value>
                <value>
                    <fullName>RTR (Scheme: Captive)</fullName>
                </value>
                <value>
                    <fullName>Vehicle Documents - Existing / Proposed (Scheme: Captive)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RemarksRemarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SECURED</fullName>
                </value>
                <value>
                    <fullName>UNSECURED</fullName>
                </value>
                <value>
                    <fullName>UCV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Login Checklist</label>
    <nameField>
        <displayFormat>LC-{000000}</displayFormat>
        <label>Login Checklist #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>